# bobail-solver

./: .gitignore  CMakeLists.txt  README.md  auto_export.sh  build_with_vsdev.bat  fix_phase.cpp  migrate_metadata.cpp  watchdog.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: game.js  index.html  style.css
include/: board.h  hash.h  movegen.h  pns.h  retrograde.h  retrograde_db.h  symmetry.h  tt.h
src/: analyze_endgames.cpp  board.cpp  engine.cpp  export_book.cpp  hash.cpp  lookup.cpp  lookup_server.py  main.cpp  movegen.cpp  perft.cpp  pns.cpp  pns_enhanced.cpp  pns_export.cpp  pns_lookup.cpp  pns_server.py  retrograde.cpp  retrograde_db.cpp  retrograde_db_main.cpp  retrograde_main.cpp  symmetry.cpp  trace_alt.cpp  trace_win.cpp  tt.cpp  verify_all_responses.cpp  verify_wins.cpp  visualize.cpp
tests/: test_board.cpp  test_movegen.cpp  test_solver_correctness.cpp  test_symmetry.cpp
web/: game.js  index.html  style.css
